<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.devdream.cookall.main.MainActivity">

    <!-- TODO Change action to onClicks -->
    <item
        android:id="@+id/search_recipes"
        app:showAsAction="always"
        android:title="@string/filter_recipes"
        android:icon="@drawable/ic_search_24dp"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/filter_recipes"
        app:showAsAction="always"
        android:title="@string/filter_recipes"
        android:icon="@drawable/ic_filter_search_24dp" />

    <item
        android:id="@+id/create_new_recipe"
        app:showAsAction="ifRoom"
        android:title="@string/create_a_recipe"
        android:icon="@drawable/ic_add_circle_white_24dp" />

    <item
        android:id="@+id/cookers_ranking"
        android:title="@string/cookers_ranking" />

    <item
        android:id="@+id/profile"
        android:title="@string/my_profile" />

    <item
        android:id="@+id/settings"
        android:title="@string/action_settings" />

    <item
        android:title="@string/feedback"
        android:onClick="navigateFeedback" />

    <item
        android:title="@string/logout"
        android:onClick="logout" />

    <item
        android:title="Test"
        android:onClick="test" />

</menu>
