<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.devdream.cookall.login.LoginActivity"
    android:label="@string/app_name"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="35dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:background="@drawable/login_background_effect">

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/app_logo_white"
        android:contentDescription="@string/app_logo" />

    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/secondaryTextColor"
            android:textColor="@color/secondaryTextColor"
            android:backgroundTint="@color/white"
            android:hint="@string/email" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/secondaryTextColor"
            android:backgroundTint="@color/white"
            android:textColor="@color/secondaryTextColor"
            android:hint="@string/password" />

    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        style="?android:attr/progressBarStyleInverse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="-15dp"
        android:visibility="gone"
        android:max="100"
        android:backgroundTint="@color/white"
        android:indeterminateTint="@color/white" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/error_incorrect_credentials"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/login_button"
        android:onClick="login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/login"
        android:theme="@style/loginButton" />

    <TextView
        android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="navigateSignUp"
        android:layout_marginBottom="24dp"
        android:text="@string/no_account_create_one"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="14sp" />

</LinearLayout>
