<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:src="@drawable/app_logo_white"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="@color/secondaryTextColor"
            android:textColor="@color/secondaryTextColor"
            android:backgroundTint="@color/white"
            android:hint="Name" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/secondaryTextColor"
            android:textColor="@color/secondaryTextColor"
            android:backgroundTint="@color/white"
            android:hint="@string/email" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/secondaryTextColor"
            android:textColor="@color/secondaryTextColor"
            android:backgroundTint="@color/white"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/create_account"
            android:theme="@style/loginButton" />

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/already_a_member_login"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"/>

    </LinearLayout>

</ScrollView>
