<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <ImageView
                android:src="@drawable/app_logo_white"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal" />

            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/secondaryTextColor"
                    android:textColor="@color/secondaryTextColor"
                    android:backgroundTint="@color/white"
                    android:hint="@string/email" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColorHint="@color/secondaryTextColor"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/secondaryTextColor"
                    android:hint="@string/password" />

            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/loading_progress_bar"
                style="?android:attr/progressBarStyleInverse"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="-15dp"
                android:visibility="gone"
                android:max="100"
                android:backgroundTint="@color/white"
                android:indeterminateTint="@color/white" />

            <TextView
                android:id="@+id/error_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/error_incorrect_credentials"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/login"
                android:theme="@style/loginButton" />

            <TextView
                android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/no_account_create_one"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>

</layout>
